--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rejoinder",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "A generator of smart, pretty, and organized output for Node/JS scripts, replacing console.*",
   "repository": {
     "type": "git",
@@ -26,5 +26,10 @@
     "pretty",
     "prompt",
     "verbose"
-  ]
+  ],
+  "devDependencies": {
+    "chai": "^3.4.1",
+    "mocha": "^2.3.4",
+    "sinon": "^1.17.2"
+  }
 }
