--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rejoinder",
   "version": "0.1.3",
-  "description": "A generator of smart, pretty, and organized output for Node/JS scripts, replacing console.*",
+  "description": "A generator of smart, pretty, and organized output for Node/JS scripts, especially when executing shell commands",
   "repository": {
     "type": "git",
     "url": "https://git.xunn.io/open-source/rejoinder"
