--- a/package.json
+++ b/package.json
@@ -1,20 +1,16 @@
 {
   "name": "rejoinder",
   "version": "0.1.3",
-  "description": "A generator of smart, pretty, and organized output for Node/JS scripts, especially when executing shell commands",
+  "description": "A generator of smart, pretty, and organized output for Node/JS scripts in the terminal",
   "repository": {
     "type": "git",
     "url": "https://git.xunn.io/open-source/rejoinder"
   },
-  "main": "rejoinder.js",
+  "main": "lib/rejoinder.js",
   "author": "Xunnamius",
   "license": "ISC",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "dependencies": {
-    "colors": "^1.1.2",
-    "shelljs": "^0.3.0"
   },
   "keywords": [
     "echo",
@@ -27,9 +23,16 @@
     "prompt",
     "verbose"
   ],
+  "dependencies": {
+    "shelljs": "^0.3.0"
+  },
+  "optionalDependencies": {
+    "colors": "^1.1.2"
+  },
   "devDependencies": {
     "chai": "^3.4.1",
     "mocha": "^2.3.4",
     "sinon": "^1.17.2"
-  }
+  },
+  "engines" : { "node" : "^4" }
 }
