--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "Xunnamius",
   "license": "ISC",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "./node_modules/.bin/mocha --reporter spec",
     "docs": "documentation -f md -o API.md"
   },
   "keywords": [
