--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "Xunnamius",
   "license": "ISC",
   "scripts": {
-    "test": "./node_modules/.bin/mocha --reporter spec",
+    "test": "./node_modules/.bin/mocha --harmony --recursive --reporter spec ./tests",
     "docs": "documentation -f md -o API.md"
   },
   "keywords": [
@@ -24,10 +24,8 @@
     "prompt",
     "verbose"
   ],
-  "dependencies": {
-    "shelljs": "^0.3.0"
-  },
   "optionalDependencies": {
+    "shelljs": "^0.3.0",
     "colors": "^1.1.2"
   },
   "devDependencies": {
