--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rejoinder",
-  "version": "0.3.11",
+  "version": "0.3.12",
   "description": "A generator of smart, pretty, and organized output for Node/JS scripts in the terminal",
   "repository": {
     "type": "git",
@@ -30,7 +30,8 @@
   "devDependencies": {
     "chai": "^3.4.1",
     "mocha": "^2.3.4",
-    "sinon": "^1.17.2"
+    "sinon": "^1.17.2",
+    "colors": "^1.1.2"
   },
   "engines": {
     "node": "^6"
