--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
   "devDependencies": {
     "chai": "^3.4.1",
     "mocha": "^2.3.4",
-    "sinon": "^1.17.2",
-    "colors": "^1.1.2"
+    "sinon": "^1.17.2"
   },
   "engines": {
     "node": "^6"
+  },
+  "dependencies": {
+    "colors": "^1.1.2"
   }
 }
