--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "ISC",
   "scripts": {
     "test": "./node_modules/.bin/mocha --recursive --reporter spec ./tests",
-    "docs": "documentation -f md -o API.md",
+    "docs": "documentation build -f md -o API.md",
     "pp": "publish-please",
     "prepublish": "publish-please guard"
   },
