removed publish-please from devdeps

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rejoinder",
-  "version": "0.3.19",
+  "version": "0.3.20",
   "description": "A generator of smart, pretty, and organized output for Node/JS scripts in the terminal",
   "repository": {
     "type": "git",
@@ -11,10 +11,7 @@
   "license": "ISC",
   "scripts": {
     "test": "mocha --recursive --reporter spec ./test",
-    "docs": "documentation build -f md -o API.md",
-    "pp": "publish-please",
-    "prepublishOnly": "publish-please guard",
-    "preinstall": ":; test -e ./package-lock.json && npx npm-force-resolutions || true"
+    "docs": "documentation build -f md -o API.md"
   },
   "keywords": [
     "echo",
@@ -33,13 +30,9 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^8.0.1",
-    "publish-please": "^5.5.1",
     "sinon": "^9.0.2"
   },
   "dependencies": {
     "colors": "^1.4.0"
-  },
-  "resolutions": {
-    "lodash": "4.17.19"
   }
 }
