build(packages/cli): break off rejoinder-cli from rejoinder as standalone package

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rejoinder-cli",
-  "version": "1.0.0",
+  "version": "1.0.0-init",
   "description": "A CLI frontend for rejoinder",
   "keywords": [],
   "homepage": "https://github.com/Xunnamius/rejoinder/tree/main/packages/cli#readme",
