--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "turbo:init": "symbiote project init-turbo --env NODE_NO_WARNINGS=1 --not-multiversal"
   },
   "dependencies": {
+    "@-xun/debug": "^1.0.0",
     "chalk": "^5.4.1",
     "core-js": "^3.40.0"
   },
