--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "lint:packages": "symbiote lint --env NODE_NO_WARNINGS=1 --hush --scope unlimited",
     "lint:project": "symbiote project lint --env NODE_NO_WARNINGS=1",
     "list-tasks": "symbiote list-tasks --env NODE_NO_WARNINGS=1 --scope this-package",
-    "prepare": "symbiote project prepare --env NODE_NO_WARNINGS=1",
+    "prepare": "node npm-pre-install.mjs && symbiote project prepare --env NODE_NO_WARNINGS=1",
     "release": "symbiote release --env NODE_NO_WARNINGS=1",
     "renovate": "symbiote project renovate --env NODE_NO_WARNINGS=1 --hush --github-reconfigure-repo --regenerate-assets --assets-preset 'lib'",
     "start": "symbiote start --env NODE_NO_WARNINGS=1 --",
@@ -91,6 +91,7 @@
     "core-js": "^3.40.0"
   },
   "devDependencies": {
+    "@-xun/debug~dev": "npm:@-xun/debug",
     "@-xun/symbiote": "^2.10.0",
     "type-fest": "^4.32.0"
   },
