build(release): re-apply cycle-breaker patches after xrelease un-applies them

--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "lint:project": "symbiote project lint --env NODE_NO_WARNINGS=1",
     "list-tasks": "symbiote list-tasks --env NODE_NO_WARNINGS=1 --scope this-package",
     "prepare": "node cycle-breaker.mjs && symbiote project prepare --env NODE_NO_WARNINGS=1",
-    "release": "symbiote release --env NODE_NO_WARNINGS=1 --no-parallel && node cycle-breaker.mjs",
+    "release": "symbiote release --env NODE_NO_WARNINGS=1 --no-parallel",
     "renovate": "symbiote project renovate --env NODE_NO_WARNINGS=1 --hush --github-reconfigure-repo --regenerate-assets --assets-preset 'lib'",
     "start": "symbiote start --env NODE_NO_WARNINGS=1 --",
     "test": "npm run test:package:unit --",
@@ -92,6 +92,7 @@
   "devDependencies": {
     "@-xun/debug~dev": "npm:@-xun/debug",
     "@-xun/symbiote": "^2.11.7",
+    "@semantic-release/exec": "^6.0.3",
     "rejoinder~dev": "npm:rejoinder",
     "type-fest": "^4.32.0"
   },
