chore(packages/cli): comment out build and release scripts for now

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -40,7 +40,8 @@
     "/README.md"
   ],
   "scripts": {
-    "build": "npm run build:dist --",
+    "#build": "npm run build:dist --",
+    "#release": "symbiote release --env NODE_NO_WARNINGS=1 --no-parallel",
     "build:changelog": "symbiote build changelog --env NODE_NO_WARNINGS=1",
     "build:dist": "symbiote build distributables --env NODE_NO_WARNINGS=1",
     "build:docs": "symbiote build docs --env NODE_NO_WARNINGS=1",
@@ -52,7 +53,6 @@
     "lint:packages": "symbiote lint --env NODE_NO_WARNINGS=1 --hush --scope unlimited",
     "lint:project": "symbiote project lint --env NODE_NO_WARNINGS=1",
     "list-tasks": "symbiote list-tasks --env NODE_NO_WARNINGS=1 --scope this-package",
-    "release": "symbiote release --env NODE_NO_WARNINGS=1 --no-parallel",
     "start": "symbiote start --env NODE_NO_WARNINGS=1 --",
     "test": "npm run test:package:unit --",
     "test:package:all": "symbiote test --env NODE_NO_WARNINGS=1 --coverage",
