--- a/tsconfig.json
+++ b/tsconfig.json
@@ -49,6 +49,14 @@
       "rootverse+github:*": ["packages/github/*"],
       "rootverse+listr2:*": ["packages/listr2/*"],
       "rootverse:*": ["*"],
+      "universe+cli:*": ["packages/cli/src/*"],
+      "universe+debug:*": ["packages/debug/src/*"],
+      "universe+github:*": ["packages/github/src/*"],
+      "universe+listr2:*": ["packages/listr2/src/*"],
+      "universe+cli": ["packages/cli/src/index.ts"],
+      "universe+debug": ["packages/debug/src/index.ts"],
+      "universe+github": ["packages/github/src/index.ts"],
+      "universe+listr2": ["packages/listr2/src/index.ts"],
       "universe:*": ["src/*"],
       "universe": ["src/index.ts"],
       "testverse+cli:*": ["packages/cli/test/*"],
