refactor: refactor files; add missing dependencies; fix test output mocks

--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
   },
   "devDependencies": {
     "@-xun/debug~dev": "npm:@-xun/debug",
+    "@-xun/fs": "^1.0.0",
     "@-xun/symbiote": "^3.0.0",
     "@semantic-release/exec": "^7.0.3",
     "rejoinder~dev": "npm:rejoinder",
