--- a/packages/github/package.json
+++ b/packages/github/package.json
@@ -71,6 +71,9 @@
   "dependencies": {
     "core-js": "^3.40.0"
   },
+  "devDependencies": {
+    "@-xun/fs": "^1.0.0"
+  },
   "peerDependencies": {
     "rejoinder": ">=1.1.0"
   },
