--- a/packages/listr2/package.json
+++ b/packages/listr2/package.json
@@ -78,6 +78,9 @@
     "@listr2/manager": "^2.0.13",
     "core-js": "^3.40.0"
   },
+  "devDependencies": {
+    "@-xun/fs": "^1.0.0"
+  },
   "peerDependencies": {
     "listr2": "^8.2.5",
     "rejoinder": ">=1.1.0"
