--- a/packages/debug/package.json
+++ b/packages/debug/package.json
@@ -73,6 +73,9 @@
     "supports-color": "^8.1.1",
     "type-fest": "^4.35.0"
   },
+  "devDependencies": {
+    "@-xun/fs": "^1.0.0"
+  },
   "engines": {
     "node": "^18.20.0 || ^20.18.0 || ^22.12.0 || >=23.3.0"
   },
