--- a/package.json
+++ b/package.json
@@ -101,7 +101,7 @@
     "type-fest": "^4.35.0"
   },
   "engines": {
-    "node": "^18.20.0 || ^20.18.0 || ^22.12.0 || >=23.3.0"
+    "node": "^20.18.0 || ^22.12.0 || >=23.3.0"
   },
   "publishConfig": {
     "access": "public",
