--- a/packages/github/package.json
+++ b/packages/github/package.json
@@ -78,7 +78,7 @@
     "rejoinder": ">=1.1.0"
   },
   "engines": {
-    "node": "^18.20.0 || ^20.18.0 || ^22.12.0 || >=23.3.0"
+    "node": "^20.18.0 || ^22.12.0 || >=23.3.0"
   },
   "publishConfig": {
     "access": "public",
