refactor: regenerate assets

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -42,35 +42,35 @@
     // ! directly, consider regenerating aliases across the entire project with:
     // ! `npx symbiote project renovate --regenerate-assets --assets-preset ...`
     "paths": {
-      "multiverse+cli:*": ["packages/cli/src/*"],
-      "multiverse+debug:*": ["packages/debug/src/*"],
-      "multiverse+github:*": ["packages/github/src/*"],
-      "multiverse+listr2:*": ["packages/listr2/src/*"],
-      "multiverse+cli": ["packages/cli/src/index.ts"],
-      "multiverse+debug": ["packages/debug/src/index.ts"],
-      "multiverse+github": ["packages/github/src/index.ts"],
-      "multiverse+listr2": ["packages/listr2/src/index.ts"],
-      "rootverse+cli:*": ["packages/cli/*"],
-      "rootverse+debug:*": ["packages/debug/*"],
-      "rootverse+github:*": ["packages/github/*"],
-      "rootverse+listr2:*": ["packages/listr2/*"],
-      "rootverse:*": ["*"],
-      "universe+cli:*": ["packages/cli/src/*"],
-      "universe+debug:*": ["packages/debug/src/*"],
-      "universe+github:*": ["packages/github/src/*"],
-      "universe+listr2:*": ["packages/listr2/src/*"],
+      "universe": ["src/index.ts"],
+      "universe:*": ["src/*"],
       "universe+cli": ["packages/cli/src/index.ts"],
       "universe+debug": ["packages/debug/src/index.ts"],
       "universe+github": ["packages/github/src/index.ts"],
       "universe+listr2": ["packages/listr2/src/index.ts"],
-      "universe:*": ["src/*"],
-      "universe": ["src/index.ts"],
+      "universe+cli:*": ["packages/cli/src/*"],
+      "universe+debug:*": ["packages/debug/src/*"],
+      "universe+github:*": ["packages/github/src/*"],
+      "universe+listr2:*": ["packages/listr2/src/*"],
+      "multiverse+cli": ["packages/cli/src/index.ts"],
+      "multiverse+debug": ["packages/debug/src/index.ts"],
+      "multiverse+github": ["packages/github/src/index.ts"],
+      "multiverse+listr2": ["packages/listr2/src/index.ts"],
+      "multiverse+cli:*": ["packages/cli/src/*"],
+      "multiverse+debug:*": ["packages/debug/src/*"],
+      "multiverse+github:*": ["packages/github/src/*"],
+      "multiverse+listr2:*": ["packages/listr2/src/*"],
+      "testverse:*": ["test/*"],
       "testverse+cli:*": ["packages/cli/test/*"],
       "testverse+debug:*": ["packages/debug/test/*"],
       "testverse+github:*": ["packages/github/test/*"],
       "testverse+listr2:*": ["packages/listr2/test/*"],
-      "testverse:*": ["test/*"],
-      "typeverse:*": ["types/*"]
+      "typeverse:*": ["types/*"],
+      "rootverse+cli:*": ["packages/cli/*"],
+      "rootverse+debug:*": ["packages/debug/*"],
+      "rootverse+github:*": ["packages/github/*"],
+      "rootverse+listr2:*": ["packages/listr2/*"],
+      "rootverse:*": ["*"]
     },
     "resolveJsonModule": true,
     "skipLibCheck": true,
