refactor: renovate assets

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -86,6 +86,8 @@
   ],
   "exclude": [
     "**/dist/**/*",
+    "**/.next/**/*",
+    "**/.wrangler/**/*",
     "**/node_modules/**/*",
     "**/*.ignore",
     "**/*.ignore.*/**/*",
