--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -17,8 +17,12 @@
   "type": "commonjs",
   "exports": {
     ".": {
-      "types": "./dist/packages/cli/src/index.d.ts",
-      "default": "./dist/packages/cli/src/index.js"
+      "types": "./dist/packages/cli/src/cli.d.ts",
+      "default": "./dist/packages/cli/src/cli.js"
+    },
+    "./commands/*": {
+      "types": "./dist/packages/cli/src/commands/*.d.ts",
+      "default": "./dist/packages/cli/src/commands/*.js"
     },
     "./package": "./package.json",
     "./package.json": "./package.json"
@@ -26,12 +30,18 @@
   "typesVersions": {
     "*": {
       "index": [
-        "dist/packages/cli/src/index.d.ts"
+        "dist/packages/cli/src/cli.d.ts"
+      ],
+      "commands/*": [
+        "dist/packages/cli/src/commands/*.d.ts"
       ],
       "package": [
         "package.json"
       ]
     }
+  },
+  "bin": {
+    "rejoin": "./dist/packages/cli/src/cli.js"
   },
   "files": [
     "/dist",
@@ -40,8 +50,7 @@
     "/README.md"
   ],
   "scripts": {
-    "#build": "npm run build:dist --",
-    "#release": "symbiote release --env NODE_NO_WARNINGS=1",
+    "build": "npm run build:dist --",
     "build:changelog": "symbiote build changelog --env NODE_NO_WARNINGS=1",
     "build:dist": "symbiote build distributables --env NODE_NO_WARNINGS=1 --not-multiversal",
     "build:docs": "symbiote build docs --env NODE_NO_WARNINGS=1",
@@ -53,6 +62,7 @@
     "lint:packages": "symbiote lint --env NODE_NO_WARNINGS=1 --hush --scope unlimited",
     "lint:project": "symbiote project lint --env NODE_NO_WARNINGS=1",
     "list-tasks": "symbiote list-tasks --env NODE_NO_WARNINGS=1 --scope this-package",
+    "release": "symbiote release --env NODE_NO_WARNINGS=1",
     "start": "symbiote start --env NODE_NO_WARNINGS=1 --",
     "test": "npm run test:package:unit --",
     "test:package:all": "symbiote test --env NODE_NO_WARNINGS=1 --tests all-local --coverage",
@@ -61,7 +71,13 @@
     "test:package:unit": "symbiote test --env NODE_NO_WARNINGS=1 --tests unit type",
     "test:packages:all": "symbiote test --env NODE_NO_WARNINGS=1 --tests all-local --scope unlimited --coverage"
   },
+  "dependencies": {
+    "@black-flag/core": "^3.0.3",
+    "package-up": "^5.0.0",
+    "rejoinder-github-actions": "^2.0.2"
+  },
   "devDependencies": {
+    "@-xun/debug": "^2.0.1",
     "@-xun/fs": "^2.0.0"
   },
   "peerDependencies": {
