build(packages/cli): make all cli names available

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -41,7 +41,8 @@
     }
   },
   "bin": {
-    "rejoin": "./dist/packages/cli/src/cli.js"
+    "rejoin": "./dist/packages/cli/src/cli.js",
+    "rejoinder-cli": "./dist/packages/cli/src/cli.js"
   },
   "files": [
     "/dist",
